# cpp-lob

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benches/: bench_throughput.cpp
examples/: simulated_flow.cpp
include/lob/: book.hpp  events.hpp  io.hpp  matching.hpp  order.hpp
scripts/: run_benchmark.sh
src/: book.cpp  io.cpp  main_cli.cpp  matching.cpp
tests/: CMakeLists.txt  test_book.cpp  test_edge_cases.cpp  test_events.cpp  test_io.cpp  test_matching.cpp  test_order.cpp
